# contract_verify

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
backend/: requirements-3month.txt  requirements-api.txt  requirements.txt
backend/app/: __init__.py  config.py  logging_setup.py  pipeline.py
backend/app/api/: app.py  auth_store.py  demo_seed.py  deps.py  schemas.py  state_store.py
backend/app/audit/: audit_log.py
backend/app/core/: enums.py  models.py  security.py
backend/app/i18n/: __init__.py  catalog.py  lang_detect.py
backend/app/ingestion/: base.py  docx_parser.py  email_parser.py  ingest_service.py  pdf_parser.py  text_parser.py
backend/cli/: main.py
backend/locales/: en.json  ja.json
backend/scripts/: generate_sample_docs.py  run_api.py  seed_demo.py
backend/tests/: conftest.py  helpers.py  test_cli.py  test_config.py  test_entities.py  test_fake_provider.py  test_ingestion.py  test_locale_autodetect.py  test_models.py  test_pipeline.py  test_prompts_locale.py  test_references.py  test_report_audit.py  test_scoring.py  test_storage.py  test_verify.py
docs/: PRD.md  TDD.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
samples/contract/: contract.txt
samples/deal/: followup.eml  term_sheet.txt
samples/playbook/: playbook.docx  playbook.yaml
samples/standard_terms/: standard_terms.docx  standard_terms.yaml
(+81 files in other folders)
