[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract_verify"
version = "0.9.0"
description = "Three-layer contract verification engine (requirements + playbook + standard terms), on-premises by default."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "contract_verify" }]
keywords = ["contracts", "verification", "legal", "rag", "on-premises"]

# Runtime dependencies are pinned with rationale in backend/requirements.txt.
# This list mirrors the required core; optional extras are grouped below.
dependencies = [
    "click>=8.1",
    "Jinja2>=3.1",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "pdfminer.six>=20221105",
    "python-docx>=1.1",
    "requests>=2.31",
    "structlog>=24.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
cloud = ["anthropic>=0.39"]
s3 = ["boto3>=1.34"]
service = ["pydantic-settings>=2.2"]
dev = ["pytest>=8.0"]

[project.scripts]
contract-verify = "cli.main:main"

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*", "cli*"]

[tool.pytest.ini_options]
# Tests live under backend/tests and import `app.*` / `cli.*`; run from repo root.
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
